# Copyright 2021 Edwin Peer and Simeon Miteff

[package]
name = "progitoor"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0"
authors = ["Edwin Peer <edwin@epiphyte2.co>", "Simeon Miteff <simeon@epiphyte2.co>" ]
readme = "README.md"
# repository = "https://github.com/"
# documentation = "https://docs.rs/"
# description = ""
# keywords = []
# categories = ["command-line-utilities"]

[dependencies]
fuse_mt = "0.5.1"
time = "0.1.43"
libc = "0.2.101"
nix = "0.22.1"
thiserror = "1.0"
tempfile = "3"
