# Copyright 2021 Edwin Peer and Simeon Miteff

[package]
name = "progitoor"
version = "0.1.1"
edition = "2018"
license = "GPL-3.0"
authors = ["Edwin Peer <edwin@epiphyte2.co>", "Simeon Miteff <simeon@epiphyte2.co>" ]
readme = "README.md"
description = "progitoor is an overlay filesystem that stores ownership and other file metadata in a text database and presents that view to processes running as root, while the actual files are user-owned and can be versioned in git."
documentation = "https://docs.rs/progitoor"
repository = "https://github.com/epiphyte2/progitoor"
keywords = ["overlay", "git", "bindroot", "filesystem", "fuse"]
categories = ["filesystem", "development-tools", "command-line-utilities", "embedded"]

[dependencies]
fuse_mt = "0.5.1"
time = "0.1.43"
libc = "0.2.101"
nix = "0.22.1"
thiserror = "1.0"
tempfile = "3"
clap = "2"
anyhow = "1.0"
daemonize = "0.5"
log = "0.4"
fern = { version = "0.6", features = ["syslog-3"] }
syslog = "3"
interprocess = "1"
